# infinitecraft-tools

./: Cargo.toml  README.md
src/: bfs.rs  db.rs  iddfs.rs  main.rs
